--- a/Hard/index.html
+++ b/Hard/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Week2</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Dom Manipulation Hard</title>
+  <link rel="stylesheet" href="hard.css">
+
 </head>
-<body>
+<body class = "main">
+    <button onClick="updateTheBackground('bg-red')">
+      Turn it red!
+    </button>
+
+    <button onClick="updateTheBackground('bg-white')">
+      Turn it white!
+    </button>
 
 
-<script src="script.js"></script>      
+    <script src ="script.js">
+     // Do Stuff Here
+    //  window.updateTheBackground = function(className) {
+      //  document.body.className=className
+
+  
+    </script>
 </body>
 </html>
